# cpp-annote

./: .gitignore  README.md  pyproject.toml
cpp/: CMakeLists.txt  README.md  embedding-vbx-parity-plan.md  porting-plan.md
cpp/port/: clustering_vbx.hpp  compute_fbank.cpp  cpp-annote.cpp  embedding_ort_infer.cpp  embedding_ort_infer.hpp  parity_log.cpp  parity_log.hpp  plda_vbx.hpp  pyannote.cpp  pyannote.hpp
cpp/scripts/: README.md  embedding_slot_metrics.py  eval_callhome_cpp_vs_python.py  export_embedding_onnx.py  export_segmentation_onnx.py
cpp/src/: annotation_support.h  clustering_vbx.cpp  clustering_vbx.h  community1_cpp_annote_embedded.cpp  community1_cpp_annote_embedded.h  compute_fbank.cpp  compute_fbank.h  cpp-annote-streaming.cpp  cpp-annote-streaming.h  cpp-annote.cpp  cpp-annote.h  embedding_ort_infer.cpp  filter_train.cpp  filter_train.h  hungarian.h  parity_log.cpp  plda_vbx.cpp  plda_vbx.h  scipy_linkage.cpp  scipy_linkage.h  wav_pcm_float32.h
cpp/tests/: annotation_golden_test.cpp  clustering_golden_test.cpp  embedding_golden_test.cpp  filter_ahc_golden_test.cpp  frozen_golden_inputs_test.cpp  full_segmentation_window_parity_test.cpp  knf_smoke_test.cpp  linkage_fcluster_golden_test.cpp  plda_fea_golden_test.cpp  reconstruct_golden_test.cpp  segmentation_golden_test.cpp  speaker_count_golden_test.cpp  vbx_parity_test.cpp
cpp/tools/: community1_shortpath.cpp  cpp-annote-cli.cpp  streaming_vs_batch_test.cpp
scripts/: build_cpp.sh  eval_callhome_cpp_vs_python.py
src/: cpp-annote-engine.h  cpp-annote.cpp  cpp-annote.h
src/pyannote/audio/models/embedding/wespeaker/: __init__.py
tools/: cpp-annote-cli.cpp
